[gd_scene load_steps=4 format=3 uid="uid://dkaekvc0dtpy8"]

[ext_resource type="Script" uid="uid://crpi2ealh73mv" path="res://story_intro.gd" id="1_5g8uu"]
[ext_resource type="Texture2D" uid="uid://r6dldkgdgpw5" path="res://Assets/Texture/UI Dialogue Box Large.png" id="2_tblw1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_noxhh"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
texture = ExtResource("2_tblw1")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g8uu")

[node name="BlackBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="DialogueBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.725
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.19998169
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_noxhh")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogueLabel" type="Label" parent="DialogueBox/MarginContainer"]
custom_minimum_size = Vector2(21, 21)
layout_mode = 2
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 1106.0
offset_top = 537.0
offset_right = 1146.0
offset_bottom = 577.0

[node name="HistoryLabel" type="RichTextLabel" parent="ScrollContainer"]
layout_mode = 2
